Fix download link: point to stable Hyprnote, not Nightly
- Changed to main download page so users can select stable version
- Added warning: download 'Hyprnote' not 'Hyprnote Nightly'
- Nightly is beta/development version with potential bugs

--- a/hyprnote-sync/onboarding.html
+++ b/hyprnote-sync/onboarding.html
@@ -377,9 +377,12 @@
         <div class="step-content">
           <h3>Download chex</h3>
           <p>AI meeting recorder with on-device transcription.</p>
-          <a href="https://hyprnote.com/download/apple-silicon" class="download-btn">Download for Mac</a>
-          <p class="detail">Install and open it. Sign in with any account (Google, etc).</p>
-          <p class="intel-link">Older Mac (Intel)? <a href="https://hyprnote.com/download/intel" target="_blank">Download Intel version</a></p>
+          <a href="https://hyprnote.com/download" class="download-btn" target="_blank">Download for Mac</a>
+          <p class="detail">Select the <strong>Apple Silicon</strong> version (or Intel for older Macs). Install and open it.</p>
+          
+          <div class="warning" style="margin-top: 12px; background: #fef3cd; border-color: #ffc107;">
+            <strong>Important:</strong> Download "Hyprnote" (stable), not "Hyprnote Nightly". Nightly is a beta version.
+          </div>
         </div>
       </div>
       
