Fix download: link to main page, instruct to select stable Hyprnote
- Link to hyprnote.com/download (main page)
- Clear checklist: select 'Hyprnote' not 'Hyprnote Nightly'
- Direct /apple-silicon URL was serving Nightly build

--- a/hyprnote-sync/onboarding.html
+++ b/hyprnote-sync/onboarding.html
@@ -376,9 +376,12 @@
         <div class="step-content">
           <h3>Download hyprnote</h3>
           <p>AI meeting recorder with on-device transcription.</p>
-          <a href="https://hyprnote.com/download/apple-silicon" class="download-btn">Download for Mac</a>
-          <p class="detail">Install and open it. Sign in with any account.</p>
-          <p class="intel-link">Older Mac? <a href="https://hyprnote.com/download/intel" target="_blank">Download Intel version</a></p>
+          <a href="https://hyprnote.com/download" class="download-btn" target="_blank">Go to Downloads</a>
+          <ul class="checklist" style="margin-top: 12px;">
+            <li>Select <strong>Hyprnote</strong> for Apple Silicon (not "Hyprnote Nightly")</li>
+            <li>Install the app and open it</li>
+            <li>Sign in with any account</li>
+          </ul>
         </div>
       </div>
       
