--- a/hyprnote-sync/hyprnote-setup-audited.html
+++ b/hyprnote-sync/hyprnote-setup-audited.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>hyprnote - Meeting Notes</title>
+  <title>hyprnote Setup (Audited)</title>
   <style>
     * {
       margin: 0;
@@ -348,11 +348,12 @@
 </head>
 <body>
   <div class="container">
-    <div class="logo">hyprnote</div>
+    <div class="logo">hyprnote <span style="font-size: 11px; font-weight: 500; background: #10b981; color: white; padding: 2px 8px; border-radius: 4px; vertical-align: middle; margin-left: 8px;">✓ Audited</span></div>
     <p class="subtitle">AI meeting notes. Record, transcribe, remember everything.</p>
     
     <div class="security-note">
       <strong>Local-first.</strong> All transcription runs on your device. No customer data leaves your computer. No cloud storage of recordings or notes.
+      <br><span style="font-size: 11px; color: #666; margin-top: 4px; display: inline-block;">Source code reviewed Dec 2025. Telemetry opt-out available in settings.</span>
     </div>
     
     <!-- MODE SELECTOR -->
